Added Select Command

--- a/src/com/endro32/proadmin/resources/config.yml
+++ b/src/com/endro32/proadmin/resources/config.yml
@@ -22,13 +22,12 @@ servers:
     mode: individual
     default:
       app: default
-      defaultmap: Survival
+      defaultmap: world
       icon: default
       plugins:
       - PermissionsEx
       - Multiverse-Core
-      maps:
-      - world
+      maps: []
 eula: true
 installed:
   apps: []
